Fix: secure the demo servlet against SQLi, command injection, path traversal